@@ -7,6 +7,7 @@ Jump Start Changelog
 * **Updated Theme Blvd framework to 2.5.2**
 * Improvement: Better handling of svg icons in IE9/10.
 * Improvement: Hero unit slider display on mobile.
+* Improvement: Allow percentages to work properly for image element display width in Layout Builder.
 * Fixed: WooCommerce cart thumbnail sizing issue in Firefox.
 * Fixed: In executive base, standard header background elements were being outputted with Transparent header.
 * Fixed: Parallax background fallback not being horizontally centered in IE9.
